--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 stages:
-  - build
-  - deploy
+  - build_xml
+  - build_html
+  - deploy_gitlab
 
 # generate XML with Doxygen
 generate-xml:
-  stage: build
+  stage: build_xml
   image: alpine
   script:
     # add Doxygen and git
@@ -20,9 +21,9 @@ generate-xml:
       - __build/xml/
     expire_in: 1 hour
 
-# generate HTML with Sphinx and deploy
-pages:
-  stage: deploy
+# generate HTML with Sphinx
+generate-html:
+  stage: build_html
   image: python:3.9.13
   script:
     # install required packages to build docs
@@ -31,6 +32,15 @@ pages:
     - sphinx-build -b html __source public
   dependencies:
     - generate-xml
+  artifacts:
+    paths:
+      - public
+
+# deploy to GitLab Page
+pages:
+  stage: deploy_gitlab
+  dependencies:
+    - generate-html
   artifacts:
     paths:
       - public
