add push to GitHub remote

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,10 +43,10 @@ git-clone:
   stage: setup_github
   image: alpine
   script:
-    # add git
-    - apk add doxygen git
-    # clone evalhyd core C++ library
-    - git clone git@github.com:hydroGR/evalhyd.git
+    # add OpenSSH and git
+    - apk add openssh-client git
+    # clone evalhyd git repository on GitHub
+    - git clone git@github.com:hydroGR/evalhyd.git html
   artifacts:
     paths:
       - html
@@ -87,11 +87,11 @@ git-commit:
     # use ssh-keyscan to scan the keys of GitHub's server
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
-    # set the username and email
-    - git config --global user.email "thibhlln@gmail.com"
-    - git config --global user.name "Thibault Hallouin"
 
-    # try to connect to GitHub
-    - ssh git@github.com
+    # commit changes and push to GitHub remote
+    - cd html
+    - git add --all
+    - git commit -m "update html"
+    - git push origin main
   dependencies:
     - generate-html
