try fix to find html in deploy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ generate-html:
     - generate-xml
   artifacts:
     paths:
-      - tmp_html
+      - tmp_html/
 
 # generate HTML with Sphinx
 git-commit:
