add git user identity

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,10 @@ git-commit:
     # clone evalhyd git repository on GitHub
     - git clone git@github.com:hydroGR/evalhyd.git html
 
+    # configure user details
+    - git config --global user.email "$GITLAB_USER_EMAIL"
+    - git config --global user.name "$GITLAB_USER_ID"
+
     # copy locally build docs into git repository
     - \cp -rf ./tmp_html/. ./html/
 
