remove DNS CNAME to avoid setting custom domain on GitHub

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,9 @@ git-clone-push-github:
     # copy locally build docs into git repository
     - \cp -rf ./tmp_html/. ./html/
 
+    # remove DNS CNAME
+    - rm ./html/CNAME
+
     # commit changes and push to GitHub remote
     - cd html
     - git add --all
