ignore CNAME file if it does not exist

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,8 +66,8 @@ git-clone-push-github:
     # copy locally build docs into git repository
     - \cp -rf ./tmp_html/. ./html/
 
-    # remove DNS CNAME
-    - rm ./html/CNAME
+    # remove DNS CNAME (ignore if does not exist)
+    - rm -f ./html/CNAME
 
     # commit changes and push to GitHub remote
     - cd html
