--- a/environment.yml
+++ b/environment.yml
@@ -11,4 +11,5 @@ dependencies:
   - docutils==0.17.1
   - pydata-sphinx-theme==0.9.0
   - sphinx-panels==0.6.0
+  - sphinx-design==0.4.1
   - breathe==4.33.0
