--- a/requirements-docs.yml
+++ b/requirements-docs.yml
@@ -5,7 +5,7 @@ dependencies:
   - git
   - make
   - doxygen
-  - python
+  - python==3.10
   # Host dependencies
   - sphinx==4.5.0
   - docutils==0.17.1
